@@ -1,10 +1,11 @@
 2016-04-21  Niibe Yutaka  <gniibe@fsij.org>
 
-	* chopstx.c (chx_snooze): New.
+	* chopstx.c (chx_snooze, chx_wakeup): New.
 	(chopstx_cond_hook, chopstx_cond_unhook): New.
 	(chopstx_cond_signal, chopstx_cond_broadcast): Fix for poll.
 	(chx_proxy_init): Initialize with RUNNING.
-	(chopstx_poll): Fix with chx_sleep.
+	(chopstx_poll): Fix with chx_snooze.
+	(chx_exit): Use chx_wakeup.
 
 	* example-fs-bb48/sample.c (main): Update with chopstx_poll.
 	* example-fs-bb48/usb-cdc.c (stream_recv): Fix the loop clear
